--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "vuedraggable": "^2.24.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
