--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/Neutron-Creative/SingleLink#readme",
   "dependencies": {
+    "aws-sdk": "^2.767.0",
     "axios": "^0.20.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "get-port": "^5.1.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
