--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vuedraggable": "^2.24.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.14.6",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/tailwindcss": "^2.1.0",
