--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "<p align=\"center\"><a href=\"https://singlelink.co/\"><img src=\"/assets/SingleLink-Brandmark.svg\" width=\"320\" alt=\"SingleLink Logo\"/></a></p> <p align=\"center\"> \t<img src=\"https://img.shields.io/badge/beta-0.9.0-%2303d2d4\" alt=\"Version\"> \t<img src=\"https://img.shields.io/badge/license-unlicensed-%236ab04c\" alt=\"License\"/> \t<img src=\"https://img.shields.io/badge/build-untested-%23eb4d4b\" alt=\"Build Status\"/> \t<img src=\"https://img.shields.io/badge/users-%3C100-%2330336b\" alt=\"Users\"/> </p> <p align=\"center\">Welcome to the SingleLink Github repository. Here you can browse the source, view open issues and monitor development.</p>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/Neutron-Creative/SingleLink#readme",
   "dependencies": {
-    "aws-sdk": "^2.767.0",
+    "@greenlock/manager": "^3.1.0",
+    "acme-http-01-standalone": "^3.0.5",
+    "aws-sdk": "^2.771.0",
     "axios": "^0.20.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
@@ -25,6 +28,9 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "get-port": "^5.1.1",
+    "greenlock": "^4.0.4",
+    "greenlock-express": "^4.0.3",
+    "greenlock-storage-s3": "^1.1.3",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
