--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node index.js"
+    "run": "node index.js",
+    "postinstall": "npx patch-package"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
     "md5": "^2.3.0",
     "mongoose": "^5.10.0",
     "nc-deeplink": "^1.0.5",
-    "redbird": "github:neutron-creative/redbird#master"
+    "redbird": "^0.10.0"
   },
   "devDependencies": {
     "eslint": "^7.11.0"
