--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "cookie-universal-nuxt": "^2.1.4",
     "nuxt": "^2.14.0",
     "vuedraggable": "^2.24.0"
   },
