--- a/www/package.json
+++ b/www/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "aos": "^3.0.0-beta.6",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "node-fetch": ">=2.6.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
