--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
+    "http-proxy": "^1.18.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
