--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 # Created by .ignore support plugin (hsz.mobi)
 
 # Configuration files
-server/config.js
+**/config.json
+**/config.js
+
+dist
 
 ### Node template
 # Logs
 logs/
-client/logs/
-server/logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
 # Runtime data
 pids
@@ -42,8 +43,7 @@ client/bower_components
 client/build/Release
 
 # Dependency directories
-client/node_modules/
-server/node_modules/
+node_modules/
 client/jspm_packages/
 
 # TypeScript v1 declaration files
