--- a/proxy/package.json
+++ b/proxy/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "singlelink",
-  "version": "2.1.0",
-  "description": "A single link for everything.",
+  "name": "singlelink-proxy",
+  "version": "1.0.0",
+  "description": "Proxy for singlelink",
   "main": "dist/App.js",
   "scripts": {
     "copy": "(copyfiles -f \"src/sql/*.sql\" dist/sql) && (copyfiles -f src/crypto/*.* dist/crypto/)",
@@ -10,8 +10,7 @@
     "dev": "ts-node --files src/App.ts --no-cache",
     "version": "auto-changelog && git add CHANGELOG.md",
     "test": "jest",
-    "test-debug": "jest --runInBand --detectOpenHandles",
-    "convert-database": "ts-node scripts/mongo-2-pg.ts"
+    "test-debug": "jest --runInBand --detectOpenHandles"
   },
   "auto-changelog": {
     "output": "CHANGELOG.md",
@@ -19,17 +18,6 @@
     "unreleased": true,
     "commitLimit": false
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Neutron-Creative/Singlelink.git"
-  },
-  "keywords": [
-    "singlelink",
-    "link",
-    "social-media",
-    "linktree",
-    "linktree-alternative"
-  ],
   "author": "Neutron Creative Inc.",
   "license": "GPL-3.0-or-later",
   "bugs": {
@@ -37,15 +25,7 @@
   },
   "homepage": "https://github.com/Neutron-Creative/Singlelink#readme",
   "dependencies": {
-    "aws-sdk": "^2.783.0",
-    "bcrypt": "^5.0.0",
-    "fastify": "^3.7.0",
-    "fastify-cors": "^4.1.0",
-    "fastify-favicon": "^3.0.0",
-    "fastify-rate-limit": "^4.0.3",
-    "jsonwebtoken": "^8.5.1",
-    "nc-deeplink": "^1.0.6",
-    "pg": "^8.4.2"
+    "redbird": "^0.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -54,7 +34,6 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
     "@types/pg": "^7.14.5",
     "@types/stripe": "^7.13.25",
@@ -66,7 +45,6 @@
     "copyfiles": "^2.4.0",
     "eslint": "^7.12.1",
     "jest": "^26.6.1",
-    "mongoose": "^5.10.12",
     "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
