--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 # Want to help our mission?
 Sponsor us at the link below!
-[https://singlelink.co/pricing/](Sponsor us)
+
+github: [Neutron-Creative]
