--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,8 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "incremental": true,
-    "target": "es2017",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "CommonJS",
     "outDir": "dist",
     "removeComments": true,
     "strict": true,
@@ -23,5 +23,8 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "ts-node": {
+    "files": true
+  }
 }
