Massive commit with enormous amounts of changes Finish up Profile Controller Major code refactor on client and server for consistency Major code cleanup Documented some previously undocumented code Added helper methods to allow for quick data conversion Added more relevant errors Pass errors instead of null in services Controller is now a class instead of an interface Controllers now by default have fastify, databaseManager, and other stuff Fix up config related things Added a test (more to come after code completion)
TODO: Add a full server testing suite

--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/Neutron-Creative/Singlelink#readme",
   "dependencies": {
     "aws-sdk": "^2.783.0",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "fastify": "^3.7.0",
     "fastify-cors": "^4.1.0",
