--- a/server/src/config/config.example.json
+++ b/server/src/config/config.example.json
@@ -1,7 +1,7 @@
 {
   "database": "",
   "secret": "",
-  "capture_key": "",
+  "captureKey": "",
   "port": 80,
   "apiDomain": "",
   "clientDomain": "",
