--- a/server/package.json
+++ b/server/package.json
@@ -37,16 +37,17 @@
   },
   "homepage": "https://github.com/Neutron-Creative/Singlelink#readme",
   "dependencies": {
-    "aws-sdk": "^2.783.0",
+    "aws-sdk": "^2.796.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
-    "fastify": "^3.7.0",
+    "fastify": "^3.8.0",
     "fastify-cors": "^4.1.0",
     "fastify-favicon": "^3.0.0",
     "fastify-rate-limit": "^4.0.3",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "nc-deeplink": "^1.0.6",
-    "pg": "^8.4.2"
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -55,20 +56,20 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.37",
-    "@types/node": "^14.14.6",
-    "@types/pg": "^7.14.5",
+    "@types/mongoose": "^5.10.1",
+    "@types/node": "^14.14.8",
+    "@types/pg": "^7.14.7",
     "@types/stripe": "^7.13.25",
     "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "auto-changelog": "^2.2.1",
-    "babel-jest": "^26.6.1",
+    "babel-jest": "^26.6.3",
     "copyfiles": "^2.4.0",
-    "eslint": "^7.12.1",
-    "jest": "^26.6.1",
-    "mongoose": "^5.10.12",
-    "ts-jest": "^26.4.3",
+    "eslint": "^7.13.0",
+    "jest": "^26.6.3",
+    "mongoose": "^5.10.15",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
