--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/App.js",
     "build": "tsc && npm run copy",
     "dev": "ts-node src/App.ts",
-    "preversion": "auto-changelog --output ../CHANGELOG.md && git add ../CHANGELOG.md && cd ../client && npm version patch && cd ../proxy && npm version patch",
+    "postversion": "auto-changelog --output ../CHANGELOG.md && git add ../CHANGELOG.md && cd ../client && npm version patch && cd ../proxy && npm version patch",
     "test": "jest",
     "test-debug": "jest --runInBand --detectOpenHandles",
     "convert-database": "ts-node scripts/mongo-2-pg.ts"
