Converted client to typescript Fixed linter so it actually works Updated all dependencies
Next: Rewrite code so it uses real components instead of just pages

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,9 +1,12 @@
 {
   "root": true,
   "env": {
+    "browser": true,
     "node": true
   },
-  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "@nuxtjs/eslint-config-typescript"
+  ],
   "plugins": [
     "@typescript-eslint"
   ],
@@ -27,6 +30,12 @@
       2,
       "always"
     ],
+    "vue/multiline-html-element-content-newline": "off",
+    "vue/html-closing-bracket-spacing": "off",
+    "vue/require-default-prop": "off",
     "object-curly-spacing": "off"
-  }
+  },
+  "ignorePatterns": [
+    "**/*.min.*"
+  ]
 }
