--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,51 @@
 {
   "name": "singlelink-client",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "analyze": "nuxt-ts build -a",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate",
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/axios": "^5.12.3",
+    "@nuxtjs/sitemap": "^2.4.0",
+    "nuxt": "^2.14.9",
     "cookie-universal-nuxt": "^2.1.4",
     "http-status-codes": "^2.1.4",
-    "nuxt": "^2.14.7",
-    "vue": "^2.6.12",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.7",
-    "@nuxtjs/eslint-config": "^5.0.0",
+    "@aceforth/nuxt-optimized-images": "^1.3.0",
+    "@nuxt/types": "^2.14.9",
+    "@nuxt/typescript-build": "^2.0.3",
+    "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.1",
-    "@nuxtjs/tailwindcss": "^3.2.0",
-    "babel-eslint": "^10.1.0",
+    "@nuxtjs/tailwindcss": "^3.3.3",
+    "@vue/test-utils": "^1.1.1",
     "auto-changelog": "^2.2.1",
-    "eslint": "^7.13.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-webpack-plugin": "^2.3.0",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.14.0",
+    "eslint-plugin-nuxt": ">=2.0.0",
+    "fibers": "^5.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.1",
+    "imagemin-svgo": "^8.0.0",
+    "jest": "^26.6.3",
+    "lqip-loader": "^2.2.1",
+    "responsive-loader": "^2.2.1",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "sharp": "^0.26.3",
+    "sqip-loader": "^1.0.0",
+    "ts-jest": "^26.4.4",
+    "vue-jest": "^4.0.0-0",
+    "webp-loader": "^0.6.0"
   }
 }
