Update types, fix many bugs Update configs Update urls Change hardcoded api url to env export

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -29,7 +29,12 @@
     "types": [
       "@types/node",
       "@nuxt/types",
-      "@nuxtjs/axios"
+      "@nuxtjs/axios",
+      "cookie-universal-nuxt"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "@types"
     ]
   },
   "exclude": [
