--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,13 @@
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@nuxt/types": "^2.14.10",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^3.3.3",
     "@vue/test-utils": "^1.1.1",
     "auto-changelog": "^2.2.1",
