--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "singlelink",
   "version": "2.1.2",
   "description": "A single link for everything.",
-  "main": "dist/App.js",
+  "main": "dist/app.js",
   "scripts": {
     "copy": "(copyfiles -f \"src/sql/*.sql\" dist/sql) && (copyfiles -f src/crypto/*.* dist/crypto/)",
-    "start": "node dist/App.js",
+    "start": "node dist/app.js",
     "build": "tsc && npm run copy",
-    "dev": "ts-node src/App.ts",
+    "dev": "ts-node src/app.ts",
     "postversion": "auto-changelog --output ../CHANGELOG.md && git add ../CHANGELOG.md && cd ../client && npm version patch && cd ../proxy && npm version patch",
     "test": "jest",
     "test-debug": "jest --runInBand --detectOpenHandles",
