--- a/server/package.json
+++ b/server/package.json
@@ -59,6 +59,7 @@
     "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.8",
     "@types/pg": "^7.14.7",
+    "@types/pg-copy-streams": "^1.2.1",
     "@types/stripe": "^7.13.25",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
