Added admin panel Added basic permission groups Separated themes and global themes Added theme viewer for global themes
Fixed some server-side bugs

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
     "postversion": "auto-changelog --output ../CHANGELOG.md && git add ../CHANGELOG.md && cd ../client && npm version patch && cd ../proxy && npm version patch",
     "test": "jest",
     "test-debug": "jest --runInBand --detectOpenHandles",
-    "convert-database": "ts-node scripts/mongo-2-pg.ts"
+    "convert-database": "ts-node scripts/mongo-2-pg.ts",
+    "add-admin": "ts-node scripts/sl-admin-manager.ts admin add",
+    "remove-admin": "ts-node scripts/sl-admin-manager.ts admin remove",
+    "list-admins": "ts-node scripts/sl-admin-manager.ts admins"
   },
   "auto-changelog": {
     "output": "CHANGELOG.md",
