--- a/server/src/config/config.example.json
+++ b/server/src/config/config.example.json
@@ -2,6 +2,7 @@
   "database": "",
   "secret": "",
   "captureKey": "",
+  "host": "0.0.0.0",
   "port": 80,
   "apiDomain": "",
   "clientDomain": "",
