--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "singlelink",
-  "version": "2.1.8",
+  "version": "2.1.9",
   "description": "A single link for everything.",
   "main": "dist/app.js",
   "scripts": {
@@ -43,6 +43,7 @@
     "aws-sdk": "^2.796.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "casbin": "^5.4.0",
     "fastify": "^3.8.0",
     "fastify-cors": "^4.1.0",
     "fastify-favicon": "^3.0.0",
