--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "cookie-universal-nuxt": "^2.1.4",
     "http-status-codes": "^2.1.4",
     "nuxt": "^2.14.10",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuejs-ace-editor": "^1.0.1"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.3.0",
