--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/sitemap": "^2.4.0",
     "cookie-universal-nuxt": "^2.1.4",
+    "cssjson": "^2.1.3",
     "http-status-codes": "^2.1.4",
     "nuxt": "^2.14.10",
     "vuedraggable": "^2.24.3",
