--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "cookie-universal-nuxt": "^2.1.4",
     "cssjson": "^2.1.3",
     "http-status-codes": "^2.1.4",
+    "monaco-editor-vue": "^1.0.10",
+    "monaco-editor-webpack-plugin": "<=1.7.0",
     "nuxt": "^2.14.10",
     "vuedraggable": "^2.24.3",
     "vuejs-ace-editor": "^1.0.1"
