Create skeleton of marketplace and some preliminary functionality Create skeleton of permissions controller Allow for data package download and user update/delete functions (to be completed)

--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "casbin": "^5.4.0",
+    "casbin-basic-adapter": "^0.1.0",
     "fastify": "^3.8.0",
     "fastify-cors": "^4.1.0",
     "fastify-favicon": "^3.0.0",
