Update www package

--- a/www/package.json
+++ b/www/package.json
@@ -11,10 +11,10 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/axios": "^5.13.1",
     "aos": "^3.0.0-beta.6",
-    "nuxt": "^2.14.0",
-    "node-fetch": ">=2.6.1"
+    "node-fetch": ">=2.6.1",
+    "nuxt": "^2.14.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
