--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   singlelink-client:
-    image: neutroncreative/singlelink-client:latest
+    image: neutroncreative/singlelink-editor:latest
     build:
       context: client
       dockerfile: client.Dockerfile
@@ -16,7 +16,7 @@ services:
   singlelink-server:
     image: neutroncreative/singlelink-server:latest
     build:
-      context: client
+      context: server
       dockerfile: server.Dockerfile
     environment:
       - DATABASE
@@ -34,11 +34,12 @@ services:
       - S3_ENDPOINT
       - S3_BUCKETNAME
       - S3_PORT
+      - S3_USE_SSL
       - S3_ACCESS_KEY
       - S3_SECRET_KEY
       - MIXPANEL_TOKEN
       - DELETE_ADDON_INSTALLS_THRESHOLD
     ports:
-      - "4400:80"
+      - "5566:80"
     expose:
-      - "4400"
+      - "5566"
