--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -26,6 +26,7 @@
     "arrow-parens": "off",
     "dot-notation": "off",
     "no-trailing-spaces": "off",
+    "no-useless-escape": "off",
     "semi": [
       2,
       "always"
