Add google authentication for sign up and login Allow user to enable google login if they've already created an account with email authentication Add google client libs to server Add password generator to string utils

--- a/server/src/config.template.json
+++ b/server/src/config.template.json
@@ -27,6 +27,11 @@
   "settings": {
     "marketplaceDeleteAddonThreshold": 10
   },
+  "google": {
+    "clientId": "",
+    "clientSecret": "",
+    "redirectUrl": ""
+  },
   "messages": {
     "passwordResetEmail": {
       "subjectCharset": "UTF-8",
