--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "add-admin": "ts-node scripts/sl-admin-manager.ts admin add",
     "remove-admin": "ts-node scripts/sl-admin-manager.ts admin remove",
     "list-admins": "ts-node scripts/sl-admin-manager.ts admins",
-    "export-stats": "ts-node scripts/stats-exporter.ts"
+    "export-stats": "ts-node scripts/stats-exporter.ts",
+    "user-gdpr-package": "ts-node scripts/sl-admin-manager.ts admin gdpr-package"
   },
   "auto-changelog": {
     "output": "CHANGELOG.md",
@@ -51,6 +52,7 @@
     "fastify-cors": "^4.1.0",
     "fastify-favicon": "^3.0.0",
     "fastify-rate-limit": "^4.0.3",
+    "googleapis": "^71.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mixpanel": "^0.13.0",
@@ -76,7 +78,7 @@
     "copyfiles": "^2.4.0",
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
-    "mongoose": "^5.10.15",
+    "mongoose": "^5.12.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
