Add google auth to client Add "Link to google" button in Settings Update nonce system Add job system

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -27,6 +27,7 @@
     "dot-notation": "off",
     "no-trailing-spaces": "off",
     "no-useless-escape": "off",
+    "padded-blocks": "off",
     "semi": [
       2,
       "always"
