--- a/server/package.json
+++ b/server/package.json
@@ -57,6 +57,7 @@
     "jsonwebtoken": "^8.5.1",
     "mixpanel": "^0.13.0",
     "nc-deeplink": "^1.0.6",
+    "node-cron": "^3.0.0",
     "pg": "^8.5.1"
   },
   "devDependencies": {
@@ -68,6 +69,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.8",
+    "@types/node-cron": "^2.0.3",
     "@types/pg": "^7.14.7",
     "@types/pg-copy-streams": "^1.2.1",
     "@types/validator": "^13.1.0",
