--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,11 @@
 {
   "name": "singlelink-api",
   "version": "2.2.0",
+  "private": true,
   "description": "A single link for everything.",
   "main": "dist/app.js",
   "scripts": {
-    "copy": "(copyfiles -f \"src/sql/*.sql\" dist/sql) && (copyfiles -f src/crypto/*.* dist/crypto/)",
+    "copy": "(copyfiles -f \"src/sql/*.sql\" dist/sql)",
     "start": "node dist/app.js",
     "build": "tsc && npm run copy",
     "dev": "ts-node src/app.ts",
