--- a/api/src/config.template.json
+++ b/api/src/config.template.json
@@ -5,7 +5,7 @@
   "host": "0.0.0.0",
   "port": 80,
   "apiDomain": "",
-  "clientDomain": "",
+  "editorDomain": "",
   "contactEmail": "",
   "aws": {
     "senderEmailAddress": "",
