--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,32 +7,12 @@ services:
       context: api
       dockerfile: api.Dockerfile
     env_file:
-      -
-    environment:
-      - DATABASE
-      - SECRET
-      - CAPTURE_KEY
-      - HOST
-      - PORT
-      - API_DOMAIN
-      - EDITOR_DOMAIN
-      - CONTACT_EMAIL
-      - AWS_SENDER_EMAIL_ADDRESS
-      - AWS_REGION
-      - AWS_ACCESS_KEY
-      - AWS_SECRET_KEY
-      - S3_ENDPOINT
-      - S3_BUCKETNAME
-      - S3_PORT
-      - S3_USE_SSL
-      - S3_ACCESS_KEY
-      - S3_SECRET_KEY
-      - MIXPANEL_TOKEN
-      - DELETE_ADDON_INSTALLS_THRESHOLD
+      - api-config.env
     ports:
-      - "80:5566"
+      - "80:80"
     networks:
       - singlelink
+
   singlelink-editor:
     image: neutroncreative/singlelink-editor:latest
     build:
@@ -40,13 +20,13 @@ services:
       dockerfile: editor.Dockerfile
     depends_on:
       - singlelink-api
-    environment:
-      - HOSTNAME
-      - API_URL
+    env_file:
+      - editor-config.env
     ports:
-      - "80:3000"
+      - "3333:80"
     networks:
       - singlelink
+
   singlelink-renderer:
     image: neutroncreative/singlelink-renderer:latest
     build:
@@ -54,12 +34,12 @@ services:
       dockerfile: renderer.Dockerfile
     depends_on:
       - singlelink-api
-    environment:
-      - HOSTNAME
-      - API_URL
+    env_file:
+      - renderer-config.env
     ports:
-      - "80:80"
+      - "3000:80"
     networks:
       - singlelink
+
 networks:
   singlelink:
