--- a/renderer/package.json
+++ b/renderer/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "description": "The light-weight site view for the Singlelink web client.",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "type": "commonjs",
   "scripts": {
+    "copy": "(copyfiles -f \"*.png\" dist/)",
     "start": "node dist/app.js",
-    "build": "tsc",
+    "build": "tsc && npm run copy",
     "dev": "ts-node src/app.ts"
   },
   "author": "Neutron Creative Inc.",
@@ -34,7 +35,7 @@
     "@typescript-eslint/parser": "^4.8.1",
     "auto-changelog": "^2.2.1",
     "babel-jest": "^26.6.3",
-    "copyfiles": "^2.4.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.13.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^10.0.0",
