Replace capture with internal screenshot capturing via pageres Use s3 bucket to cache images Add renderer domain to config Update readme

--- a/api/src/config.template.json
+++ b/api/src/config.template.json
@@ -6,6 +6,7 @@
   "port": 80,
   "apiDomain": "",
   "editorDomain": "",
+  "rendererDomain": "",
   "contactEmail": "",
   "aws": {
     "senderEmailAddress": "",
