--- a/api-config.template.env
+++ b/api-config.template.env
@@ -13,6 +13,9 @@ API_DOMAIN=https://api.example.com
 # The domain where you are hosting the editor (used for emails)
 EDITOR_DOMAIN=https://editor.example.com
 
+# The domain where you are hosting the renderer (used for screenshots and redirection)
+RENDERER_DOMAIN=https://renderer.example.com
+
 # A secret string that is used to encode JWTs. Make sure it's randomly generated for maximum security.
 SECRET=HereIsARandomStringPleaseChangeMeOrYouWillBeHacked
 
