--- a/api/package.json
+++ b/api/package.json
@@ -74,6 +74,7 @@
     "@types/mixpanel": "^2.14.2",
     "@types/node": "^14.14.8",
     "@types/node-cron": "^2.0.3",
+    "@types/object-hash": "^2.1.0",
     "@types/pg": "^7.14.7",
     "@types/pg-copy-streams": "^1.2.1",
     "@types/validator": "^13.1.0",
