--- a/api/package.json
+++ b/api/package.json
@@ -55,6 +55,7 @@
     "googleapis": "^71.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "linktree-scraper": "^0.2.2",
     "minio": "^7.0.18",
     "mixpanel": "^0.13.0",
     "nc-deeplink": "^1.0.6",
@@ -72,7 +73,6 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/minio": "^7.0.7",
     "@types/mixpanel": "^2.14.2",
-    "@types/node": "^14.14.8",
     "@types/node-cron": "^2.0.3",
     "@types/object-hash": "^2.1.0",
     "@types/pg": "^7.14.7",
