--- a/editor/package.json
+++ b/editor/package.json
@@ -15,7 +15,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/sitemap": "^2.4.0",
     "cookie-universal-nuxt": "^2.1.4",
-    "cssjson": "^2.1.3",
+    "cssjson": "github:Neutron-Creative/CSSJSON#master",
     "http-status-codes": "^2.1.4",
     "monaco-editor-vue": "^1.0.10",
     "monaco-editor-webpack-plugin": "<=1.7.0",
