--- a/editor/package.json
+++ b/editor/package.json
@@ -11,40 +11,40 @@
     "lint": "eslint --ext .ts,.js,.vue ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.3",
+    "@aceforth/nuxt-optimized-images": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "cookie-universal-nuxt": "^2.1.4",
     "cssjson": "github:Neutron-Creative/CSSJSON#master",
     "http-status-codes": "^2.1.4",
-    "monaco-editor-vue": "^1.0.10",
-    "monaco-editor-webpack-plugin": "<=1.7.0",
-    "nuxt": "^2.15.6",
-    "vuedraggable": "^2.24.3",
-    "vuejs-ace-editor": "^1.0.1",
-    "sharp": "^0.26.3",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.1",
     "imagemin-svgo": "^8.0.0",
-    "@nuxtjs/fontawesome": "^1.1.2",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@aceforth/nuxt-optimized-images": "^1.3.0"
+    "monaco-editor-vue": "^1.0.10",
+    "monaco-editor-webpack-plugin": "<=1.7.0",
+    "nuxt": "^2.13.3",
+    "sharp": "^0.26.3",
+    "vuedraggable": "^2.24.3",
+    "vuejs-ace-editor": "^1.0.1"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.6",
+    "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^4.1.3",
-    "@vue/test-utils": "^1.1.1",
+    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@vue/test-utils": "^1.2.1",
     "auto-changelog": "^2.2.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.28.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "jest": "^26.6.3",
-    "lqip-loader": "^2.2.1",
+    "lqip-loader": "^2.1.1",
     "responsive-loader": "^2.2.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
