Fix watermark toggling
Fix renderer code
Fix watermark link
Fix iFrame reloading in editor

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Singlelink",
-  "description": "The open-source micro-site framework.",
+  "description": "The open-source micro-site platform.",
   "keywords": [
     "microsite",
     "micro-site",
