--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
     "apollo-server-micro": "^3.6.3",
@@ -17,11 +18,27 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.1",
+    "@graphql-codegen/typescript": "1.22.0",
+    "@graphql-codegen/typescript-operations": "1.17.16",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.2",
+    "@graphql-codegen/typescript-resolvers": "1.18.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "camelize-ts": "^1.0.8",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "graphql": "^15.8.0",
+    "graphql-codegen": "^0.4.0",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.5"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Neutron-Creative/Singlelink.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Neutron-Creative/Singlelink/issues"
+  }
 }
