--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@graphql-codegen/typescript-resolvers": "1.18.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "camelize-ts": "^1.0.8",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "graphql": "^15.8.0",
     "graphql-codegen": "^0.4.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.21",
     "ts-node": "^10.4.0",
     "typescript": "4.5.5"
   },
