--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "apollo-server-micro": "^3.6.3",
-    "graphql": "^15.7.2",
+    "graphql": "15.7.2",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "12.0.10",
