--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "graphql": "15.7.2",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
+    "mysql-await": "^2.1.8",
     "next": "12.0.10",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
