--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "micro-cors": "^0.1.1",
     "mysql-await": "^2.1.8",
     "next": "12.0.10",
+    "next-absolute-url": "^1.2.2",
     "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
