--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "singlelink",
-  "private": true,
+  "private": false,
   "version": "4.0.0",
+  "homepage": "https://singlelink.co",
+  "license": "GPL-3.0-or-later",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -43,11 +45,17 @@
     "tailwindcss": "^3.0.21",
     "typescript": "4.5.5"
   },
+  "bugs": {
+    "url": "https://github.com/Neutron-Creative/Singlelink/issues",
+    "email": "jim@neutroncreative.com"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Neutron-Creative/Singlelink.git"
   },
-  "bugs": {
-    "url": "https://github.com/Neutron-Creative/Singlelink/issues"
+  "author": {
+    "name": "Jim Bisenius",
+    "email": "jim@neutroncreative.com",
+    "url": "https://twitter.com/jim_bisenius"
   }
 }
