--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -24,7 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Installing dependencies
-      run: npm ci
+      run: npm i
     - name: Performing lint
       run: npm run lint
     - name: Generating build
