--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -6,6 +6,7 @@ name: Build & lint
 on:
   pull_request:
     types: ['opened', 'edited', 'reopened', 'synchronize']
+  workflow_dispatch:
 
 jobs:
   build:
