--- a/package.json
+++ b/package.json
@@ -29,17 +29,19 @@
     "pg": "^8.7.3",
     "postgres-migrations": "^5.3.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.6.1",
+    "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "1.22.0",
     "@graphql-codegen/typescript-operations": "1.17.16",
     "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@graphql-codegen/typescript-resolvers": "1.18.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "autoprefixer": "^10.4.2",
     "camelize-ts": "^1.0.8",
     "eslint": "8.8.0",
