--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "graphql-codegen --config codegen.yml --watch",
-    "db:migrate": "npx dotenv-run-script no_dotenv_db:migrate",
-    "no_dotenv_db:migrate": "npx ts-node lib/migrate-db.mjs",
-    "postinstall": "npx ts-node lib/migrate-db.mjs"
+    "postinstall": "npx migrate-mysql",
+    "db:migrate": "npx migrate-mysql",
+    "boot:db": "docker pull mysql | docker run --name singlelink-mysql -e MYSQL_DATABASE=singlelink -p 3306:3306 -e MYSQL_ROOT_PASSWORD=single-my-links -d mysql:latest"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
@@ -48,6 +48,7 @@
     "eslint-config-next": "12.0.10",
     "graphql": "^15.7.2",
     "graphql-codegen": "^0.4.0",
+    "migrate-mysql": "^0.3.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.21",
     "typescript": "4.5.5"
