--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   singlelink:
     ports:
       - 3000:3000
-    image: singlelink
+    image: jimbisenius/singlelink
     depends_on:
       - mysql
     environment:
