--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:docker": "docker build -t singlelink ./docker",
+    "build:docker": "docker build -t jimbisenius/singlelink ./docker",
     "start": "next start",
     "lint": "next lint",
     "generate": "graphql-codegen --config codegen.yml --watch",
