--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@graphql-codegen/typescript-operations": "1.17.16",
     "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@graphql-codegen/typescript-resolvers": "1.18.0",
-    "@types/node": "17.0.17",
+    "@types/node": "^17.0.17",
     "@types/react": "17.0.39",
     "@types/react-beautiful-dnd": "^13.1.2",
     "autoprefixer": "^10.4.2",
