Update .env template

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
-PGDATABASE=
-PGPORT=
-PGHOST=
-PGUSER=
-PGPASSWORD=
+DB_DATABASE=
+DB_PORT=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
 META_TITLE=
 META_DESC=
 META_IMG=
